# spfc

./: Cargo.toml  README.md  registry.json
.ci/: build.sh  build_tarballs.jl  release.jl  update_registry.jl
.github/workflows/: builder.yml  test_builder.yml
backends/spfc-target-ttf/: Cargo.toml
backends/spfc-target-ttf/src/: lib.rs
backends/spfc-target-ttf/src/builders/: cmap.rs  colr_cpal.rs  glyf_loca.rs  gsub.rs  head.rs  hhea.rs  htmx.rs  maxp.rs  mod.rs  name.rs  os2.rs
backends/spfc-target-ttf/src/utilities/: mod.rs  pixel_grid.rs  pixmap_glyph.rs
spfc-abi/: Cargo.toml
spfc-abi/src/: convertors.rs  lib.rs  result.rs  rust_types.rs
spfc-cli/: Cargo.toml
spfc-cli/src/: main.rs  manager.rs
spfc-macros/: Cargo.toml
spfc-macros/src/: lib.rs
src/: main.rs
src/builders/: cmap.rs  gasp.rs  glyf_loca.rs  head.rs  hhea.rs  htmx.rs  maxp.rs  mod.rs  name.rs  os2.rs  post.rs
src/utilities/: mod.rs  pixel_grid.rs  pixmap_glyph.rs
