[workspace]
resolver = "2"
members = [
    "spfc-abi",
    "spfc-cli",
    "backends/spfc-target-ttf"
, "spfc-macros"]

[workspace.package]
version = "0.0.1"
authors = ["SimplePixelFont"]
edition = "2024"
license = "Apache-2.0"

# Share dependencies across the workspace to compile faster
[workspace.dependencies]
anyhow = "1.0"
