[package]
name = "spfc"
version.workspace = true
edition.workspace = true

[dependencies]
spfc-abi = { path = "../spfc-abi" }
anyhow.workspace = true
clap = { version = "4.5.54", features = ["derive"] }
libloading = "0.8"
directories = "5.0"
log = "0.4.29"
env_logger = "0.11.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3.27.0"