[package]
name = "spfc"
version = "0.1.3"
edition.workspace = true

[dependencies]
spfc-abi = { path = "../spfc-abi" }
anyhow.workspace = true
clap = { version = "4.5.54", features = ["derive"] }
libloading = "0.8"
directories = "5.0"
log = "0.4.29"
env_logger = "0.11.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls-vendored"] }
# rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
# rustls-rustcrypto = "0.1.0"
# webpki-root-certs = "1.0.6"
tokio = { version = "1", features = ["full"] }
tempfile = "3.27.0"